[gd_scene load_steps=13 format=3 uid="uid://b70sjmhx0dnwd"]

[ext_resource type="Script" uid="uid://cbgyu7ea55sqe" path="res://scenes/snake.gd" id="1_baghe"]
[ext_resource type="Script" uid="uid://dnm55e2fb52my" path="res://scenes/left_turn_marker.gd" id="2_yc36x"]
[ext_resource type="Script" uid="uid://cd73awdifq4cr" path="res://scenes/right_turn_marker.gd" id="3_auphx"]
[ext_resource type="AudioStream" uid="uid://dcpseypn22fsx" path="res://res/sounds/crunch.1.ogg" id="4_uotcb"]
[ext_resource type="AudioStream" uid="uid://cq3ur4bt2npaj" path="res://res/sounds/crunch.2.ogg" id="5_21w4a"]
[ext_resource type="AudioStream" uid="uid://dxpo0uck0x6ga" path="res://res/sounds/crunch.3.ogg" id="6_l1qxe"]
[ext_resource type="AudioStream" uid="uid://c6dkrk1nlg5bs" path="res://res/sounds/crunch.4.ogg" id="7_px58k"]
[ext_resource type="AudioStream" uid="uid://dloeseepk36jc" path="res://res/sounds/crunch.5.ogg" id="8_fwnpn"]
[ext_resource type="AudioStream" uid="uid://cojs7ufewroa7" path="res://res/sounds/crunch.6.ogg" id="9_xfue1"]
[ext_resource type="AudioStream" uid="uid://b6csxmpafwabu" path="res://res/sounds/crunch.7.ogg" id="10_kc3sr"]

[sub_resource type="Curve" id="Curve_yqjtg"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.200893, 0.857143), -0.671329, -0.671329, 0, 0, Vector2(0.377232, 0.747253), -0.345479, -0.345479, 0, 0, Vector2(0.560268, 0.681319), -0.506787, -0.506787, 0, 0, Vector2(0.75, 0.604396), -0.351653, -0.351653, 0, 0, Vector2(0.955357, 0.510989), 0.0, 0.0, 0, 0, Vector2(0.995536, 0.159341), 0.0, 0.0, 0, 0]
point_count = 7

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_wk5vo"]
streams_count = 7
stream_0/stream = ExtResource("4_uotcb")
stream_1/stream = ExtResource("5_21w4a")
stream_2/stream = ExtResource("6_l1qxe")
stream_3/stream = ExtResource("7_px58k")
stream_4/stream = ExtResource("8_fwnpn")
stream_5/stream = ExtResource("9_xfue1")
stream_6/stream = ExtResource("10_kc3sr")

[node name="Snake" type="Line2D"]
width = 20.0
width_curve = SubResource("Curve_yqjtg")
default_color = Color(98, 92, 84, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("1_baghe")

[node name="SnakeSpawn" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(588, 316)

[node name="leftTurnMarker" type="Marker2D" parent="."]
script = ExtResource("2_yc36x")

[node name="rightTurnMarker" type="Marker2D" parent="."]
script = ExtResource("3_auphx")

[node name="EndTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true
ignore_time_scale = true

[node name="EatSounds" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_wk5vo")
bus = &"SFX"
